fixing line behind avatar image so it doesn't screw with the responsiveness

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -83,8 +83,8 @@ img {
   display: block;
   position: absolute;
   top: 50%;
-  left: -3em;
-  width: calc(100% + 6em);
+  left: 0em;
+  width: calc(100%);
   height: 1px;
   z-index: -1;
   background: #c8cccf;
